--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "proto:install": "npm i git+https://github.com/Danis0n/real-estate-proto.git",
     "proto:user": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/user/ node_modules/proto-config/proto/user.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:auth": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/auth/ node_modules/proto-config/proto/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
-    "proto:all": "npm run proto:auth && npm run proto:user"
+    "proto:image": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/image/ node_modules/proto-config/proto/image.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
+    "proto:all": "npm run proto:auth && npm run proto:user && npm run proto:image"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.7.3",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.18.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
