--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "proto:user": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/user/ node_modules/proto-config/proto/user.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:auth": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/auth/ node_modules/proto-config/proto/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:image": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/image/ node_modules/proto-config/proto/image.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
-    "proto:all": "npm run proto:auth && npm run proto:user && npm run proto:image"
+    "proto:post": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/proto-config/proto --ts_proto_out=src/post/ node_modules/proto-config/proto/post.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
+    "proto:all": "npm run proto:auth && npm run proto:user && npm run proto:image && npm run proto:post"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.7.3",
